sample/retrieveUnpackaged/objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>Connection_Month__c</fullName>
        <label>Connection Month</label>
        <picklist>
            <picklistValues>
                <fullName>May - 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun - 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul - 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug - 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep - 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct - 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov - 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec - 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan - 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb - 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar - 2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Rejected_Reason__c</fullName>
        <label>Other Rejected Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quoted_Price__c</fullName>
        <label>Quoted Price</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quote</label>
    <nameField>
        <displayFormat>Q{0000000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>